@startuml
skinparam groupInheritance 2

class Regex <<utility>> {
    + {static} DIVIDER_REGEX: String = " | "
}

class Ui {
    - in: Scanner
    + greetUser(): void
    + sayGoodbye(): void
    + getUserInput(): String
    + {static} printList(\n\tarrayList: ArrayList<T>,\n\tcolumns ArrayList<PrintColumn<T>>\n): void
}

class AuthorList {
    + {static} authorColumnsToPrint()\n: ArrayList<PrintColumn<Author>>
}

class MangaList {
    + {static} mangaColumnsToPrint(\n\tincludeDeadline: boolean,\n\tincludeSales: boolean\n): ArrayList<PrintColumn<Manga>>
}

class Author {
    - authorName: String
    + getAuthorName(): String
}

class Manga {
    - mangaName: String
    - deadline: String
    + getMangaName(): String
    + getDeadline(): String
    + getSalesData(): Sale
}

class Sale {
    - quantitySold: int
    - unitPrice: double
    - totalRevenue: double
    + getQuantitySold(): int
    + getUnitPrice(): double
    + getTotalRevenue(): double
}

class PrintColumn<T> {
    - header: String
    - width: int
    - valueProvider: Function<T, String>
    + getHeader(): String
    + getWidth(): int
    + getValue(object: T): String
}

Regex <.. Ui : uses

Ui ..> AuthorList : prints >
Ui ..> MangaList : prints >
Ui ..> "2..6" PrintColumn : gets print configuration\nthrough AuthorList/MangaList >

MangaList o--- "*" Manga : comprises of >
MangaList .l.> "2..6" PrintColumn: specifies print configuration >

AuthorList o--- "*" Author : comprises of >
AuthorList .r.> "2" PrintColumn: specifies print configuration >

Manga ---> "salesData\n0..1" Sale
Manga -l-> "author\n0..1" Author

'PrintColumn .> Manga : gives valueProvider to <
'PrintColumn .> Author : gives valueProvider to <
'PrintColumn ..> Sale : gives valueProvider to <

note "valueProviders are methods that\nreturn the String representation of\na particular attribute of a class\nThey come from Author/Manga/Sale\n(for e.g. getMangaName(), getTotalRevenue())" as valueProviderNote
PrintColumn .. valueProviderNote

@enduml